GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :


    - 1.19alpha16 :
    
        - The job's originating hostname is now stored in the database,
          and exported as PYKOTAJOBORIGINATINGHOSTNAME in the environment.
        
    - 1.19alpha15 :
    
        - The old pykota filter is now removed. This means that
          currently PyKota doesn't support LPRng anymore, but 
          LPRng support will be re-added, improved, in the near future.
          
    - 1.19alpha14 :
    
        - PYKOTAPRECOMPUTEDJOBSIZE and PYKOTAPRECOMPUTEDJOBPRICE 
          are now exported as environment variables.
          
        - Heavy CPU usage is now completely fixed it seems, by 
          introducing some 0.01 second sleeping when nothing to do.
          
        - Pre-computation of the job's size is now only
          done when enforcement is "STRICT", this saves
          CPU for people who don't want to use this new
          feature.
          
        - New 'enforcement' directive which accepts either
          STRICT or LAXIST. See sample configuration file
          for details.
          
    - 1.19alpha13 :
    
        - Get back to an old version of the polling loop which
          worked fine, but non-optimally. Will be optimized
          as time permits.
          
    - 1.19alpha12 :
    
        - Job's size is now precomputed unconditionnally using 
          the generic PDL analyzer.
          NB : This value is not yet used to pre-allow/deny the
          job.
        
    - 1.19alpha11 :
    
        - The pykota filter is now completely deprecated and
          can't be used anymore. LPRng users MUST download 
          an older version of PyKota. CUPS users MUST use